# cloudPersp

./: .gitignore
client/: Cargo.toml
client/src/: main.rs  temp.txt
cours-suivi/: README.md  angular.json  package-lock.json  package.json
cours-suivi/src/: index.html
cours-suivi/src/app/: app.component.spec.ts  app.component.ts
server/: Cargo.toml  beacon.txt  logs.txt  test.html  texte.txt
server/src/: main.rs
