[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.12.0", features = ["full"] }
http = { version = "0.2" }
tiny_http = "0.12"
chrono = "0.4"